<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        tools:context=".details.ShoeDetail">


        <TextView
            android:id="@+id/shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="42dp"
            android:text="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_name"
            app:layout_constraintTop_toTopOf="@+id/shoe_name"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="@+id/shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

        <EditText
            android:id="@+id/company_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@={shoe.company}"
            app:layout_constraintBottom_toBottomOf="@+id/company"
            app:layout_constraintEnd_toEndOf="@+id/shoe_name_edit"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toTopOf="@+id/company"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/shoe_size"
            app:layout_constraintStart_toStartOf="@+id/company"
            app:layout_constraintTop_toBottomOf="@+id/company" />

        <EditText
            android:id="@+id/size_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={shoe.size}"
            app:layout_constraintBottom_toBottomOf="@+id/size"
            app:layout_constraintEnd_toEndOf="@+id/company_edit"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toTopOf="@+id/size"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/size"
            app:layout_constraintTop_toBottomOf="@+id/size" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toBottomOf="@+id/description"
            app:layout_constraintEnd_toEndOf="@+id/size_edit"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toTopOf="@+id/description"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/back"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edit" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="@+id/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>